# digest-generator

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  SECURITY.md  feeds.example.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
digest_generator/: api.py  cli.py
digest_generator/core/: categories.py  prompt_loader.py  style.py  types.py
digest_generator/core/audio/: __init__.py  io.py  narration.py  narration_overrides.yaml  renderer.py  types.py
digest_generator/core/digest/: __init__.py  io.py  orchestrator.py  types.py
digest_generator/core/digest/prompts/: __init__.py
digest_generator/core/digest/prompts/templates/: cluster_system.md  editorial_pass_system.md  intro_system.md  section_merge_system.md  section_system.md  title_system.md  watch_system.md
digest_generator/core/digest/stages/: clusterer.py  composer.py  editorial.py  framer.py  watcher.py  writer.py
digest_generator/core/label/: __init__.py  io.py
digest_generator/core/label/stages/: __init__.py  topic.py
digest_generator/core/summary/: __init__.py  io.py
digest_generator/core/summary/prompts/: __init__.py
digest_generator/core/summary/prompts/templates/: article_summary_system.md
digest_generator/core/summary/stages/: __init__.py  summarizer.py
digest_generator/shared/: hf_hub.py  logging.py  settings.py
digest_generator/shared/llm/: __init__.py  clients.py  sampling.py  telemetry.py  typography.py
digest_generator/shared/runtime/: __init__.py  dirs.py  meta.py
digest_generator/shared/transformers/: __init__.py  registry.py  types.py
digest_generator/shared/tts/: __init__.py  engine.py  registry.py  types.py
digest_generator/sources/: __init__.py
digest_generator/sources/rss/: config.py  fetcher.py  io.py  types.py
docs/: setup.md  usage.md
scripts/: test_digest.py
tests/: conftest.py  test_api.py  test_cli_audio.py
tests/core/: test_categories.py  test_clusterer.py  test_composer.py  test_digest_style.py  test_editorial.py  test_framer.py  test_prompt_loader.py  test_summarizer.py  test_topic.py  test_types.py  test_watcher.py  test_writer.py
tests/core/audio/: test_io.py  test_narration.py  test_renderer.py  test_types.py
tests/core/digest/: test_io.py  test_types.py
tests/core/label/: test_io.py
tests/core/summary/: test_io.py
tests/shared/: test_hf_hub.py  test_logging.py  test_settings.py
tests/shared/llm/: test_clients.py  test_sampling.py  test_telemetry.py  test_typography.py
tests/shared/runtime/: test_dirs.py  test_meta.py
tests/shared/transformers/: test_types.py
tests/shared/tts/: test_engine.py  test_registry.py  test_types.py
tests/sources/rss/: test_config.py  test_fetcher.py  test_io.py  test_types.py
